// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Test home route 1`] = `
.lights-0 {
  display: block;
  width: 252px;
  height: 252px;
  margin: 15px auto;
  background: url(file-stub);
}

.lights-1 + .lights-1 {
  padding-top: 15px;
}

<div>
  <i
    class="lights-0"
  />
  <ul
    class="navClass"
  >
    <li
      class="navItemClass"
    >
      <a
        class="linkClass"
        href="/"
      >
        Home
      </a>
    </li>
    <li
      class="navItemClass"
    >
      <a
        class="linkClass"
        href="/tools"
      >
        Tools
      </a>
    </li>
  </ul>
  <div
    class="contentClass"
  >
    <section>
      <p
        class="lights-1"
      >
        Welcome to the 
        <strong>
          Universal React Starter-kyt
        </strong>
        . This starter kyt should serve as the base for an advanced, server-rendered React app.
      </p>
      <p
        class="lights-1"
      >
        Check out the Tools section for an outline of the libraries that are used in this Starter-kyt.
      </p>
    </section>
  </div>
</div>
`;

exports[`App Test home route 2`] = `
Array [
  "../Home",
]
`;

exports[`App Test tools route 1`] = `
.lights-0 {
  display: block;
  width: 252px;
  height: 252px;
  margin: 15px auto;
  background: url(file-stub);
}

.lights-1 + .lights-1 {
  padding-top: 5px;
}

<div>
  <i
    class="lights-0"
  />
  <ul
    class="navClass"
  >
    <li
      class="navItemClass"
    >
      <a
        class="linkClass"
        href="/"
      >
        Home
      </a>
    </li>
    <li
      class="navItemClass"
    >
      <a
        class="linkClass"
        href="/tools"
      >
        Tools
      </a>
    </li>
  </ul>
  <div
    class="contentClass"
  >
    <ul>
      <li
        class="lights-1"
      >
        <a
          href="https://expressjs.com/"
        >
          Express
        </a>
         - server-side rendering
      </li>
      <li
        class="lights-1"
      >
        <a
          href="https://reactjs.org/"
        >
          React
        </a>
         - component library
      </li>
      <li
        class="lights-1"
      >
        <a
          href="https://reacttraining.com/react-router/"
        >
          React Router
        </a>
         - server and browser routing
      </li>
      <li
        class="lights-1"
      >
        <a
          href="https://github.com/nytimes/pretty-lights"
        >
          Pretty Lights
        </a>
         - CSS-in-JS with a reliable API
      </li>
      <li
        class="lights-1"
      >
        <a
          href="https://testing-library.com/docs/react-testing-library/intro/"
        >
          React Testing Library
        </a>
         
        - React component testing
      </li>
    </ul>
  </div>
</div>
`;

exports[`App Test tools route 2`] = `
Array [
  "../Tools",
]
`;
